# luajitcpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
luajitcpp-unix/: CMakeLists.txt  README.md  luajitCli.cpp  version.lua
luajitcpp-unix/src/: luajitCli.cpp  luajitLoadLuaFile.cpp
luajitcpp-win/: CMakeLists.txt  main.cpp
luajitcpp-win/luajit/: test.lua  version.lua
